<resources>
    <string name="app_name">Services</string>
    <string name="start_service">Start Service</string>
    <string name="service_lifecycle">Service Lifecycle</string>
    <string name="stop_service">Stop Service</string>
    <string name="simple_service">Simple Service</string>
    <string name="service_data">Service Data</string>
    <string name="empty_text" />
    <string name="task_1">Task 1</string>
    <string name="task_2">Task 2</string>
    <string name="task_3">Task 3</string>
    <string name="task_start_result">TASK 1 start</string>
    <string name="task_start_2_result">TASK 2 start</string>
    <string name="start_task_3_result">TASK 3 start</string>
    <string name="finish_1">TASK 1 finish, result = </string>
    <string name="finish_2">TASK 2 finish, result = </string>
    <string name="finish_3">TASK 3 finish, result = </string>
    <string name="send_data_broadcast">Send Data Broadcast</string>
    <string name="send_data_pending_intent">Send Data Pending Intent</string>
    <string name="binding">Binding</string>
    <string name="bind">Bind</string>
    <string name="unbind">Unbind</string>
    <string name="local_binding">Local Binding</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="notification">Notification</string>
    <string name="play_service">Play Service</string>
</resources>
