<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainChildBackground"
    android:padding="16dp"
    tools:context="._007_binding.BindingActivity">

    <Button
        android:id="@+id/start_service_binding_button"
        style="@style/button_style"
        android:layout_height="wrap_content"
        android:background="@drawable/style_button"
        android:text="@string/start_service"
        android:onClick="startServiceBindingOnClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/stop_service_binding_button"
        style="@style/button_style"
        android:layout_height="wrap_content"
        android:background="@drawable/style_button"
        android:text="@string/stop_service"
        android:onClick="stopServiceBindingOnClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_service_binding_button" />

    <Button
        android:id="@+id/bind_button"
        style="@style/button_style"
        android:layout_height="wrap_content"
        android:background="@drawable/style_button"
        android:text="@string/bind"
        android:onClick="bindBindingOnClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stop_service_binding_button" />

    <Button
        android:id="@+id/unbind_button"
        style="@style/button_style"
        android:layout_height="wrap_content"
        android:background="@drawable/style_button"
        android:text="@string/unbind"
        android:onClick="unbindBindingOnClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bind_button" />

</androidx.constraintlayout.widget.ConstraintLayout>