<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainChildBackground"
    android:padding="16dp"
    tools:context="._009_notification.NotificationActivity">

    <TextView
        android:id="@+id/notification_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_text"
        style="@style/text_view_style"
        android:background="@drawable/style_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/start_notification_button"
        android:layout_height="wrap_content"
        android:text="@string/start_service"
        style="@style/button_style"
        android:onClick="onClickStartNotification"
        android:background="@drawable/style_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notification_text_view" />

    <Button
        android:id="@+id/stop_notification_button"
        android:layout_height="wrap_content"
        android:text="@string/stop_service"
        style="@style/button_style"
        android:onClick="onClickStopNotification"
        android:background="@drawable/style_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_notification_button" />

</androidx.constraintlayout.widget.ConstraintLayout>